# Progetto-Tetris

./: q  .gitignore  CMakeCache.txt  CMakeLists.txt  Giuoco.h  Griglia.cpp  Griglia.hpp  Linea.cpp  Linea.hpp  Makefile  Quadrato.cpp  Quadrato.hpp  README.md  RecuperoCodice  Tetramino.cpp  Tetramino.hpp  Tetris  Title.h  Window.cpp  Window.h  classifica.cpp  classifica.h  cmake_install.cmake  copiagiuoco.cpp  main.cpp  tetris_scores.txt
Consegna Tetris/: CMakeLists.txt  Giuoco.cpp  Griglia.cpp  Linea.cpp  Linea.hpp  Makefile  Quadrato.cpp  Tetramino.hpp  Title.cpp  Window.hpp  classifica.cpp  classifica.h  cmake_install.cmake  main.cpp  tetris_scores.txt
